force-app/main/objects/Bureau_System__c.object
<CustomObject>
    <description>This object represents a relation between a Bureau Job and a System.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field represents the Job Account to which the selected System must belong if it is a Client System.</description>
        <inlineHelpText>Select the Account for selecting a Client System</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Bureau_Systems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bureau_Job__c</fullName>
        <description>This field represents the Bureau Job to which is the parent of this record.</description>
        <label>Managed Services Job</label>
        <referenceTo>Job__c</referenceTo>
        <relationshipLabel>Managed Services Systems</relationshipLabel>
        <relationshipName>Bureau_Systems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Feedback_Provider__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is meant for selecting the Feedback Provider for this system</description>
        <inlineHelpText>Select the Feedback Provider for this system</inlineHelpText>
        <label>Feedback Provider</label>
        <referenceTo>Report_User__c</referenceTo>
        <relationshipName>Bureau_Systems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Client_System__c</fullName>
        <description>This field shows whether the selected system is a Client System or not.</description>
        <formula>IF(System__r.Is_Client_System__c,&quot;Yes&quot;, &quot;No&quot;)</formula>
        <inlineHelpText>Specify whether the selected System is a Client System.</inlineHelpText>
        <label>Is Client System</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Id__c</fullName>
        <description>This field represents the Project Id for this Job on the selected system.</description>
        <inlineHelpText>Specify Project Id for this Job on the selected system.</inlineHelpText>
        <label>Project Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Language__c</fullName>
        <description>This field represents the language in which reports shall be generated for the selected system.</description>
        <inlineHelpText>Specify the language in which reports shall be generated for the selected system.</inlineHelpText>
        <label>Report Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>English (International)</fullName>
                </value>
                <value>
                    <fullName>English (United States)</fullName>
                </value>
                <value>
                    <fullName>Arabic</fullName>
                </value>
                <value>
                    <fullName>Chinese (Simplified)</fullName>
                </value>
                <value>
                    <fullName>Chinese (Traditional)</fullName>
                </value>
                <value>
                    <fullName>Czech</fullName>
                </value>
                <value>
                    <fullName>Danish</fullName>
                </value>
                <value>
                    <fullName>Dutch</fullName>
                </value>
                <value>
                    <fullName>Dutch (Belgian)</fullName>
                </value>
                <value>
                    <fullName>English (South Africa)</fullName>
                </value>
                <value>
                    <fullName>Estonian</fullName>
                </value>
                <value>
                    <fullName>Finnish</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>French (Belgian)</fullName>
                </value>
                <value>
                    <fullName>French (Canda)</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Greek</fullName>
                </value>
                <value>
                    <fullName>Hungarian</fullName>
                </value>
                <value>
                    <fullName>Icelandic</fullName>
                </value>
                <value>
                    <fullName>Indonesian</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
                <value>
                    <fullName>Korean</fullName>
                </value>
                <value>
                    <fullName>Latvian</fullName>
                </value>
                <value>
                    <fullName>Lithuanian</fullName>
                </value>
                <value>
                    <fullName>Norwegian</fullName>
                </value>
                <value>
                    <fullName>Polish</fullName>
                </value>
                <value>
                    <fullName>Portuguese</fullName>
                </value>
                <value>
                    <fullName>Portuguese (Brazil)</fullName>
                </value>
                <value>
                    <fullName>Russian</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>System_Login__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The field represents the System Login to be used by the Bureau Job to access the selected system.</description>
        <inlineHelpText>Specify the System Login to be used to access the selected system.</inlineHelpText>
        <label>System Login</label>
        <referenceTo>System_Login__c</referenceTo>
        <relationshipName>Bureau_Systems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>System_Type__c</fullName>
        <description>This field shows the System Type of the selected System</description>
        <formula>TEXT(System__r.System_Type__c)</formula>
        <inlineHelpText>This is the System Type of the selected System</inlineHelpText>
        <label>System Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_URL__c</fullName>
        <formula>System__r.System_URL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>System URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Username__c</fullName>
        <formula>System_Login__r.Username__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>System Username</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field represents the System that is used by the Bureau Job</description>
        <inlineHelpText>Select the System to be used</inlineHelpText>
        <label>System</label>
        <referenceTo>System__c</referenceTo>
        <relationshipName>Bureau_Systems</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Managed Services System</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BJS{000000}</displayFormat>
        <label>Managed Services System Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Managed Services Systems</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>